# datum

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  build.rs  justfile  roadmap.md
.github/workflows/: quickstart.yml
book/: book.toml
cjc_codegen/: Cargo.toml
cjc_codegen/src/: control_flow_graph.rs  instruction.rs  lib.rs
cjc_hir/: Cargo.toml
cjc_hir/src/: expression.rs  function.rs  hir.rs  lib.rs  namespace.rs  statement.rs  struct_def.rs  types.rs
cjc_ir_pretty/: Cargo.toml
cjc_ir_pretty/src/: lib.rs
cjc_lexer/: Cargo.toml
cjc_lexer/src/: lexer.rs  lib.rs  token.rs
cjc_mir/: Cargo.toml  README.md
cjc_mir/src/: basic_block.rs  control_flow_graph.rs  instruction.rs  lib.rs
cjc_parser/: Cargo.toml  build.rs
cjc_parser/src/: charj.lalrpop  datum.lalrpop  lib.rs  parse_tree.rs  parser.rs  token.rs
codegen/: Cargo.toml
codegen/src/: control_flow_graph.rs  instruction.rs  lib.rs
compiler/: .gitignore  Cargo.toml  README.md
compiler/src/: builtin.rs  codegen.rs  compiler.rs  expression.rs  lib.rs  namespace.rs  statements.rs  symboltable.rs
compiler/src/lowerify/: base_target.rs  classic_target.rs  code_object.rs  compiler.rs  mod.rs  struct_builder.rs  target_builder.rs  wasm_target.rs
compiler/src/meanify/: control_flow_graph.rs  meanify.rs  mod.rs  variable_table.rs
compiler/src/neat/: builtin.rs  expression.rs  mod.rs  namespace.rs  program.rs  statements.rs  struct_function.rs  symbol_table.rs  unit.rs
dc_codegen/: Cargo.toml
dc_compiler/: .gitignore  Cargo.toml
dc_compiler/src/: lib.rs
dc_compiler/src/lowerify/: base_target.rs  code_object.rs  wasm_target.rs
dc_compiler/src/meanify/: control_flow_graph.rs  meanify.rs
dc_compiler/src/neat/: mod.rs  statements.rs  symbol_table.rs  unit.rs
dc_hir/: Cargo.toml  README.md
dc_hir/src/: expression.rs  lib.rs  statement.rs  types.rs
dc_ir_pretty/: Cargo.toml  README.md
dc_ir_pretty/src/: lib.rs
dc_lexer/: Cargo.toml
dc_lexer/src/: lexer.rs  token.rs
dc_mir/: Cargo.toml
dc_mir/src/: instruction.rs
dc_parser/: Cargo.toml  build.rs
dc_parser/src/: datum.lalrpop  lib.rs  parse_tree.rs  parser.rs
docs/: README.md  design.md
docs/adr/: 0001-newline-or-semicolon.md  0002-package-format-design.md  0002-package-format.md  0003-standard-library-design.md  0003-standard-library-package-format.md  0004-dependency-manager.md  0005-types-system.md  0006-empty-method.md  0007-support-for-newline.md  0008-constructor-design.md  0009-compiler-design.md  0010-target.md  0011-does-syntax-close-to-llvm.md  0012-builtin-functions.md  0013-irbuilder.md  0014-ir-design.md  0015-mir.md  0016-cli-target-&-improve.md  0016-cli-target-improve.md  0017-container-parser-syntax.md  0017-parser-syntax.md  0018-use-semicolon-for-split-context.md  0019-language-server.md  0020-low-code-design-inside.md  0021-replace-tower-lsp.md  0022-design-by-contract-design.md  README.md
docs/compares/: solang.md
docs/compares/rust/: README.md  main.hir  main.hir-tree  main.mir
docs/compares/solang/: resolve.md
docs/examples/: func-call.cj  hello-world.cj  if-condition.cj  multiple-import.cj  struct.cj
docs/langs/: 111-assignment.md  type-system.md
docs/langs/zh-cn/: 0-design-principle.md
docs/llvm/: README.md  hello.c  hello.ll  hello.s
examples/: hello-world.cj  if-condition.cj  multiple-import.cj  struct.cj
language_server/: Cargo.toml
parser/: Cargo.toml
parser/src/: ast.rs  charj.lalrpop  error.rs  lexer.rs  lib.rs  location.rs  parse_tree.rs  parser.rs  pt.rs  token.rs
src/: lib.rs
stdlib/fmt/: fmt.cj
stdlib/io/: io.cj
stdlib/net/: net.cj
stdlib/os/: os.cj
stdlib/reflect/: reflect.cj
stdlib/strings/: strings.cj
