[package]
name = "charj"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/phodal/charj"
documentation = "https://github.com/phodal/charj"
homepage = "https://github.com/phodal/charj"
description = """
Charj is a language for describe other languages
"""
categories = ["text-processing", "command-line-interface", "development-tools", "parser-implementations", "parsing"]
exclude = [
    "benchmark/*",
    "fixtures/*",
    ".github/*",
    ".gitattributes",
    ".adr.json",
    ".cargo_vcs_info.json",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33"


[dependencies.compiler]
path = "compiler"

[dependencies.parser]
path = "parser"

[dependencies.codegen]
path = "codegen"

[workspace]
members = [
    "parser",
    "compiler",
    "codegen"
]