[package]
name = "charj"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/phodal/charj"
documentation = "https://github.com/phodal/charj"
homepage = "https://github.com/phodal/charj"
description = """
Charj is a language for describe other languages
"""
categories = ["text-processing", "command-line-interface", "development-tools", "parser-implementations", "parsing"]
exclude = [
    "benchmark/*",
    "fixtures/*",
    ".github/*",
    ".gitattributes",
    ".adr.json",
    ".cargo_vcs_info.json",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33"

# lsp
tower-lsp = "0.13"
lsp-types = "0.81"
tokio = { version = "0.2", features = ["rt-core", "io-std"] }


[dependencies.compiler]
path = "compiler"

[dependencies.cjc_parser]
path = "cjc_parser"

[dependencies.cjc_codegen]
path = "cjc_codegen"

[dev-dependencies]
assert_cmd = "1.0.2"

[workspace]
members = [
    "compiler",
    "cjc_lexer",
    "cjc_parser",
    "cjc_codegen",
    "cjc_hir",
    "cjc_mir",
    "cjc_ir_pretty",  # output IR for debug
]