[package]
name = "datum"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/datum-lang/datum"
documentation = "https://github.com/datum-lang/datum"
homepage = "https://github.com/datum-lang/datum"
description = """
Datum is a language for describe other languages
"""
categories = ["text-processing", "command-line-interface", "development-tools", "parser-implementations", "parsing"]
exclude = [
    "benchmark/*",
    "fixtures/*",
    ".github/*",
    ".gitattributes",
    ".adr.json",
    ".cargo_vcs_info.json",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33"

# serial
serde_json = "1.0"
serde = "1.0"
serde_derive = { version = "1.0" }

# lsp
tower-lsp = "0.13"
lsp-types = "0.81"
tokio = { version = "0.2", features = ["rt-core", "io-std"] }


[dependencies.dc_compiler]
path = "dc_compiler"
version = "0.1.0"

[dependencies.dc_parser]
path = "dc_parser"
version = "0.1.0"

[dependencies.dc_codegen]
path = "dc_codegen"
version = "0.1.0"

[dev-dependencies]
assert_cmd = "1.0.2"

[workspace]
members = [
    "dc_compiler",
    "dc_lexer",
    "dc_parser",
    "dc_codegen",
    "dc_hir",
    "dc_mir",
    "dc_ir_pretty",  # output IR for debug
]