[package]
name = "codegen"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.3", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }