[package]
name = "compiler"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# all support targets for inkwell
inkwell = { version = "0.1.0-llvm10sample", features = ["target-x86", "target-webassembly", "llvm10-0"] }

[dependencies.parser]
path = "../parser"

[dependencies.codegen]
path = "../codegen"
