[package]
name = "compiler"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.0"

# all support targets for inkwell
inkwell = { version = "0.1.0-llvm10sample", features = ["target-x86", "target-webassembly", "llvm10-0"] }

[dependencies.cjc_parser]
path = "../cjc_parser"

[dependencies.cjc_codegen]
path = "../cjc_codegen"
