[package]
name = "compiler"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.0"
lazy_static = "1.4"
# todo: update targets
inkwell = { version = "0.1.0-llvm10sample", features = ["target-x86", "target-arm", "target-webassembly", "llvm10-0"] }

cjc_lexer = { path = "../cjc_lexer" }
cjc_hir = { path = "../cjc_hir" }
cjc_mir = { path = "../cjc_mir" }
cjc_parser = { path = "../cjc_parser" }
cjc_codegen = { path = "../cjc_codegen" }

[dev-dependencies]
wasmi = "0.6"
