[package]
name = "dc_compiler"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.0"
lazy_static = "1.4"
# todo: update targets
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["target-x86", "target-arm", "target-webassembly", "llvm11-0"] }

dc_lexer = { path = "../dc_lexer" }
dc_hir = { path = "../dc_hir" }
dc_mir = { path = "../dc_mir" }
dc_parser = { path = "../dc_parser" }
dc_codegen = { path = "../dc_codegen" }

[dev-dependencies]
wasmi = "0.6"
