[package]
name = "dc_parser"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing
license = "MIT"
readme = "README.md"
repository = "https://github.com/datum-lang/datum"
documentation = "https://github.com/datum-lang/datum"
homepage = "https://github.com/datum-lang/datum"
description = """
Datum is a language for describe other languages
"""
categories = ["text-processing", "command-line-interface", "development-tools", "parser-implementations", "parsing"]
exclude = [
    "benchmark/*",
    "fixtures/*",
    ".github/*",
    ".gitattributes",
    ".adr.json",
    ".cargo_vcs_info.json",
]

[dependencies]
lalrpop-util = "0.19.6"
unicode-xid = "0.2.0"
phf = { version = "0.8", features = ["macros"] }
num-bigint = "0.3"
num-traits = "0.2"
num-derive = "0.3"

regex = "1"

dc_lexer = { path = "../dc_lexer" }

# Add a build-time dependency on the lalrpop library:
[build-dependencies.lalrpop]
version = "0.19.1"
features = ["lexer"]
